--- a/src/main/resources/static/changeEmail.html
+++ b/src/main/resources/static/changeEmail.html
@@ -27,6 +27,8 @@
                 })
 
             })
+             alert("You have changed your email successfully")
+             window.location.replace('/UserPage');
         }
     </script>
 
