--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -186,6 +186,7 @@ if(pw1 !== pw2) {
          })
      })
     alert("You have changed your password successfully")
+    window.location.replace('/UserPage');
 
 }
 </script>
