--- a/src/main/resources/static/loginPage.html
+++ b/src/main/resources/static/loginPage.html
@@ -5,6 +5,11 @@
     <meta content="utf-8" http-equiv="encoding">
 
 </head>
+<script>
+    function add() {
+        window.location.replace('/ModePage');
+    }
+</script>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
 function setCookie(c_name,value,expiredays)
@@ -129,13 +134,61 @@ $(document).ready(function(){
     border: 1px solid #888;
     width: 80%;
     }
+    button:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
+
+    }
+    .imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    }
+
+    .container {
+    padding: 16px;
+    }
+
+
+    .upperbtn {
+    background-color: #0d57a0;
+    color: white;
+    padding: 5px 5px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    }
+
+    #upperlevel {
+    width: 100%;
+    height: 50px;
+    }
+
+    #homesection {
+    width: 240px;
+    height: 123px;
+    float: left;
+    }
+
+    #usersection {
+    width: 240px;
+    height: 123px;
+    float: right;
+    }
 
 
 </style>
 
 <body>
+<div id="upperlevel">
+    <div class="uppersection" id="homesection">
+        <button class="upperbtn" type="button" id="homebtn" onclick="add()">
+            <span class="glyphicon glyphicon-home"></span> Home
+        </button>
+    </div>
+    </div>
 
 <div class="middle">
+
     <form>
         <div class="imgContainer">
             <img src="logo2.jpg" alt="logo" class="logo" style="width: 374px; height: 317px;">
