--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -136,7 +136,7 @@
     </div>
 
     <div class="uppersection" id="usersection">
-        <button class="upperbtn" id="userbtn" type="button" style="float: right"></button>
+        <button class="upperbtn" id="userbtn" type="button" style="float: right" ></button>
     </div>
 </div>
 
@@ -174,6 +174,13 @@
 
 </div>
 </body>
+<script>
+
+     function add2(){
+
+        window.location.replace('/UserPage');
+    }
+</script>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
 function getCookie(c_name)
@@ -201,6 +208,24 @@ if (username != "") {
 } else {
     userbtn.appendChild(document.createTextNode('Login'));
 }
+$(document).ready(function(){
+    console.log("111111");
+    $("#searchbysym").click(function() {
+        window.location.replace('/DepartmentPage');
+    });
+
+    $("#nearby").click(function() {
+        window.location.replace('/MapPage');
+    });
+
+    $("#userbtn").click(function() {
+        if (username != "") {
+            window.location.replace('/UserPage');
+        } else {
+            window.location.replace('/LoginPage');
+        }
+    });
+});
 function initMap() {
     if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(function (position) {
