--- a/src/main/resources/static/signupPage.html
+++ b/src/main/resources/static/signupPage.html
@@ -53,6 +53,11 @@
 
 
 </script>
+<script>
+    function add() {
+     window.location.replace('/ModePage');
+    }
+</script>
 <style>
     body {
         background-color: #1aa8a8;
@@ -119,11 +124,59 @@
         border: 1px solid #888;
         width: 80%;
     }
+    button:hover{
+        color: #42a5f5;
+        transition: text-shadow 1s,color 1s;
+
+    }
+    .imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    }
+
+    .container {
+    padding: 16px;
+    }
+
+
+    .upperbtn {
+    background-color: #0d57a0;
+    color: white;
+    padding: 5px 5px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    }
+
+    #upperlevel {
+    width: 100%;
+    height: 50px;
+    }
+
+    #homesection {
+    width: 240px;
+    height: 123px;
+    float: left;
+    }
+
+    #usersection {
+    width: 240px;
+    height: 123px;
+    float: right;
+    }
 
 
 </style>
 
 <body>
+<div id="upperlevel">
+    <div class="uppersection" id="homesection">
+        <button class="upperbtn" type="button" id="homebtn" onclick="add()">
+            <span class="glyphicon glyphicon-home"></span> Home
+        </button>
+    </div>
+</div>
+
 
 <div class="middle">
     <form>
