bug fixed in description page

--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -25,8 +25,8 @@
             <li><button id="btn1" type="submit" value="Dermatology">Dermatology</button></li>
             <li><button id="btn2" type="submit" value="Neurology">Neurology</button></li>
             <li><button id="btn3" type="submit" value="Osteology">Osteology</button></li>
-            <li><button id="btn4" type="submit" value="ophtalmology">ophtalmology</button></li>
-            <li><button id="btn5" type="submit" value="psychiatry">psychiatry</button></li>
+            <li><button id="btn4" type="submit" value="Ophthalmology">OphtHalmology</button></li>
+            <li><button id="btn5" type="submit" value="Psychiatry">Psychiatry</button></li>
             <li><button id="btn6" type="submit" value="Cardiology">Cardiology</button></li>
             <li><button id="btn7" type="submit" value="Cerebral surgery">Cerebral surgery</button></li>
 
