--- a/src/main/resources/static/authorityPage.html
+++ b/src/main/resources/static/authorityPage.html
@@ -15,7 +15,7 @@ $(document).ready(function(){
         var obj = {};
 
         obj.username = username1;
-        obj.access = access;
+        obj.authority = access;
         console.log(obj);
 
         $(function(callback) {
