--- a/src/main/resources/static/articleView.html
+++ b/src/main/resources/static/articleView.html
@@ -29,7 +29,7 @@
     .footer {
         position:fixed;
         bottom:0;
-        left:35cm;
+        left:32cm;
     }
      button:hover{
         color: #42a5f5;
@@ -105,7 +105,7 @@
 </div>
 <div class="footer">
     <a href="#top">
-        <img border="0" src="/Users/ruipang/Documents/cs307/WebDoctor/src/main/resources/static/cs307箭头.jpg" />
+        <img border="0" src="屏幕快照 2016-11-17 15.47.10.png">
     </a>
 </div>
 </body>
