--- a/src/main/resources/static/authorityPage.html
+++ b/src/main/resources/static/authorityPage.html
@@ -36,7 +36,7 @@ $(document).ready(function(){
             }).done(function(result) {
                 console.log(result);
                 if (result == 0) {
-                    alert("fail!");
+                    alert("fail! Username invalid!");
                 }
                 if (result == 1) {
                     alert("success!");
