--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -8,6 +8,13 @@
     <script>
       tinymce.init({
         selector: '#mytextarea',
+        plugins: "image",
+        images_upload_url: "/ArticleImage",
+        images_upload_base_path: "D:\\WebDoctor\\src\\main\\resources\\static\\articleImages",
+        images_upload_credentials: true,
+        theme: "modern",
+        menubar: "insert, edit, format",
+        toolbar: "insertfile undo redo image | styleselect | bold italic | bullist numlist outdent indent | ",
         height : "400"
       });
     </script>
