--- a/src/main/resources/static/editDescriptionPage.html
+++ b/src/main/resources/static/editDescriptionPage.html
@@ -6,7 +6,15 @@
     <script src='https://cdn.tinymce.com/4/tinymce.min.js'></script>
     <script>
       tinymce.init({
-        selector: '#mytextarea'
+        selector: '#mytextarea',
+        plugins: "image",
+        images_upload_url: "/ArticleImage",
+        images_upload_base_path: "D:\\WebDoctor\\src\\main\\resources\\static\\articleImages",
+        images_upload_credentials: true,
+        theme: "modern",
+        menubar: "insert, edit, format",
+        toolbar: "insertfile undo redo image | styleselect | bold italic | bullist numlist outdent indent | ",
+        height : "400"
       });
     </script>
 
