--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -66,13 +66,13 @@
     </div>
 <div style="margin-left: 100px">
 <h1 style="color: #fefefe;margin-top: 2.5cm;font-size: large">Username</h1>
-<h2 id="username" style="color: #fefefe"></h2>
-<h1 style="color: #fefefe;margin-top: 1.5cm;font-size: large">Your ID</h1>
-<h2 id="userID" style="color: #fefefe"></h2>
-<h1 style="color: #fefefe;margin-top: 1.5cm;font-size: large">Email</h1>
-<h2 id="email" style="color: #fefefe"></h2>
-<h1 style="color: #fefefe;margin-top: 1.5cm;font-size: large">Authority</h1>
-<h2 id="Aut" style="color: #fefefe"></h2>
+<h2 id="username" style="color: #fefefe; font-size:20px"></h2>
+<h1 style="color: #fefefe;margin-top: 1cm;font-size: large">Your ID</h1>
+<h2 id="userID" style="color: #fefefe;font-size:20px"></h2>
+<h1 style="color: #fefefe;margin-top: 1cm;font-size: large">Email</h1>
+<h2 id="email" style="color: #fefefe;font-size:20px"></h2>
+<h1 style="color: #fefefe;margin-top: 1cm;font-size: large">Authority</h1>
+<h2 id="Aut" style="color: #fefefe;font-size:20px"></h2>
     <h1 style="color: #fefefe;margin-top: 1.5cm;font-size: large">Articles</h1>
 
     <h2 id="Artical" style="color: #fefefe;margin-top: 1.5cm;font-size: large"></h2>
@@ -162,26 +162,7 @@
             }
             else if(obj.authority == 1) {
                 document.getElementById("Aut").innerHTML = "Certified user";
-              $(function(callback) {
-              res = $.ajax({
-              url: '/UserPage',
-              type: 'POST',
-              dataType: 'json',
-              data: JSON.stringify(obj2),
-              contentType: "application/json; charset=utf-8",
-              success: function (data) {
-              callback(data);
-            },
-            error: function (error) {
-                console.log(error);
             }
-
-        })
-        var res = res.done(function(result) {
-            console.log(res.responseText);
-            var obj = JSON.parse(res.responseText);
-
-        }
             else if(obj.authority == 2) {
                 document.getElementById("Aut").innerHTML = "Admin";
             }
