--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -25,10 +25,13 @@
             <li><button id="btn1" type="submit" value="Dermatology">Dermatology</button></li>
             <li><button id="btn2" type="submit" value="Neurology">Neurology</button></li>
             <li><button id="btn3" type="submit" value="Osteology">Osteology</button></li>
-            <li><button id="btn4" type="submit" value="Ophthalmology">OphtHalmology</button></li>
+            <li><button id="btn4" type="submit" value="Ophthalmology">Ophthalmology</button></li>
             <li><button id="btn5" type="submit" value="Psychiatry">Psychiatry</button></li>
-            <li><button id="btn6" type="submit" value="Cardiology">Cardiology</button></li>
-            <li><button id="btn7" type="submit" value="Cerebral surgery">Cerebral surgery</button></li>
+            <li><button id="btn6" type="submit" value="General">General</button></li>
+            <li><button id="btn7" type="submit" value="Gastroenterology">Gastroenterology</button></li>
+            <li><button id="btn8" type="submit" value="Endocrinology">Endocrinology</button></li>
+            <li><button id="btn9" type="submit" value="Dentistry">Dentistry</button></li>
+            <li><button id="btn10" type="submit" value="Pulmonology">Pulmonology</button></li>
 
         </ul>
 
