--- a/src/main/resources/static/articlePost.html
+++ b/src/main/resources/static/articlePost.html
@@ -181,7 +181,7 @@ function submitChange() {
 
     obj.title = title;
     obj.content = content;
-    obj.author = username;
+    obj.authorName = username;
     obj.disease = related;
 
     console.log(obj);
