--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -314,7 +314,7 @@ $(document).ready(function(){
                 }
             }).done(function(result) {
                 for (var k in result) {
-                    console.log(result[k]);
+                    console.log(result);
 
                     var articleList = document.getElementById("articleList");
 
