--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -28,6 +28,46 @@
 
 </head>
 <style>
+    /* The Modal (background) */
+    .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /*  Content */
+    .modal-content {
+    background-color: #1aa8b9;
+    margin: auto;
+    padding: 20px;
+    padding-bottom: 10%;
+    border: 1px solid #888;
+    width: 50%;
+    height: 10%;
+    }
+
+    /* The Close Button */
+    .close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
 
     body {
     background-color: #1aa8a8;
@@ -209,7 +249,7 @@
             </div>
         </div>
 
-        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="width: 20%; font-size: 14px">
+        <button class="addbtn" type="button" class="addbtn" style="width: 20%; font-size: 14px" onclick="newTag()">
             <span class="glyphicon glyphicon-plus"></span>New symptom
         </button>
 
@@ -217,6 +257,41 @@
 
     </form>
     <button class="middlebtn" id="submitbtn" type="button" style="float: right; width: 10%" onclick="submitChange()">Submit</button>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">CLOSE</span>
+            <div class="input-group" style="margin-bottom: 5px;">
+                <span class="input-group-addon">Symptom Name</span>
+                <input type="text" class="form-control" id="newSymName" placeholder="Please give the symptom a name">
+            </div>
+
+            <!-- Split button -->
+            <div class="btn-group">
+                <button type="button" class="btn btn-danger" style="width: auto">Select a department</button>
+                <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" style="width: auto">
+                    <span class="caret"></span>
+                    <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Dermatology</a></li>
+                    <li><a href="#">Neurologyn</a></li>
+                    <li><a href="#">Osteology</a></li>
+                    <li><a href="#">Ophthalmology</a></li>
+                    <li><a href="#">Psychiatry</a></li>
+                    <li><a href="#">General</a></li>
+                    <li><a href="#">Gastroenterology</a></li>
+                    <li><a href="#">Endocrinology</a></li>
+                    <li><a href="#">Dentistry</a></li>
+                    <li><a href="#">Pulmonology</a></li>
+
+                </ul>
+            </div>
+
+        </div>
+    </div>
 
 </div>
 
@@ -293,6 +368,16 @@ function makeTagList(callback) {
 
 window.onload = makeTagList;
 
+var modal = document.getElementById('myModal');
+var span = document.getElementsByClassName("close")[0];
+function newTag() {
+
+    modal.style.display = "block";
+}
+
+ span.onclick = function() {
+    modal.style.display = "none";
+ }
 
 function setCookie(c_name,value,expiredays)
 {
