--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -26,6 +26,14 @@
       });
     </script>
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
+
+
+
 </head>
 <style>
     /* The Modal (background) */
@@ -51,7 +59,7 @@
     padding-bottom: 10%;
     border: 1px solid #888;
     width: 50%;
-    height: 10%;
+    height: 26%;
     }
 
     /* The Close Button */
@@ -211,6 +219,14 @@
         font-size: 10px;
     }
 
+    #newAdded button {
+    background-color: red;
+    display: inline-block;
+    width: 100px;
+    height: 50px;
+    padding: auto;
+    }
+
 
 </style>
 
@@ -249,9 +265,13 @@
             </div>
         </div>
 
-        <button class="addbtn" type="button" class="addbtn" style="width: 20%; font-size: 14px" onclick="newTag()">
+        <button class="addbtn" type="button" class="addbtn" style="width: 20%; font-size: 14px" onclick="showModal()">
             <span class="glyphicon glyphicon-plus"></span>New symptom
         </button>
+
+        <div class="input-group" id="newAdded" style="margin-bottom: 5px;">
+
+        </div>
 
         <textarea name="contnet" id="mytextarea"></textarea>
 
@@ -268,27 +288,22 @@
                 <input type="text" class="form-control" id="newSymName" placeholder="Please give the symptom a name">
             </div>
 
-            <!-- Split button -->
-            <div class="btn-group">
-                <button type="button" class="btn btn-danger" style="width: auto">Select a department</button>
-                <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" style="width: auto">
-                    <span class="caret"></span>
-                    <span class="sr-only">Toggle Dropdown</span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Dermatology</a></li>
-                    <li><a href="#">Neurologyn</a></li>
-                    <li><a href="#">Osteology</a></li>
-                    <li><a href="#">Ophthalmology</a></li>
-                    <li><a href="#">Psychiatry</a></li>
-                    <li><a href="#">General</a></li>
-                    <li><a href="#">Gastroenterology</a></li>
-                    <li><a href="#">Endocrinology</a></li>
-                    <li><a href="#">Dentistry</a></li>
-                    <li><a href="#">Pulmonology</a></li>
-
-                </ul>
-            </div>
+            <select class="selectpicker show-tick" id="depList">
+                <option>Dermatology</option>
+                <option>Neurologyn</option>
+                <option>Osteology</option>
+                <option>Ophthalmology</option>
+                <option>Psychiatry</option>
+                <option>General</option>
+                <option>Gastroenterology</option>
+                <option>Endocrinology</option>
+                <option>Dentistry</option>
+                <option>Pulmonology</option>
+            </select>
+            <br>
+            <button class="addbtn" type="button" class="addbtn" style="width: 20%; font-size: 12px;" onclick="confirmNew()">
+                <span class="glyphicon glyphicon-ok"></span>Confirm
+            </button>
 
         </div>
     </div>
@@ -370,14 +385,37 @@ window.onload = makeTagList;
 
 var modal = document.getElementById('myModal');
 var span = document.getElementsByClassName("close")[0];
-function newTag() {
-
+function showModal() {
     modal.style.display = "block";
 }
 
  span.onclick = function() {
     modal.style.display = "none";
  }
+
+function confirmNew() {
+    var newName = document.getElementById('newSymName').value;
+    var newDep = $("#depList").find("option:selected").text();
+    console.log(newName);
+    console.log(newDep);
+
+    var newArea = document.getElementById('newAdded');
+
+    var newbtn = document.createElement("BUTTON");
+    newbtn.setAttribute('type', 'button');
+
+    newbtn.setAttribute("value", newName);
+    newbtn.setAttribute("department", newDep);
+    newbtn.appendChild(document.createTextNode(newName));
+
+    newbtn.onclick = function() {
+        console.log("hhh");
+        $(this).remove();
+    };
+
+    newArea.appendChild(newbtn);
+    console.log("level3");
+}
 
 function setCookie(c_name,value,expiredays)
 {
@@ -418,7 +456,6 @@ if (username != "") {
 
 function submitChange() {
     var checkbox_value = "";
-    var checkbox_value = "";
     $(":checkbox").each(function () {
         var ischecked = $(this).is(":checked");
         if (ischecked) {
@@ -426,6 +463,20 @@ function submitChange() {
         }
     });
 
+    var new_obj_list = [];
+
+    var count = 0;
+
+    $('#newAdded button').each(function() {
+        var new_obj = {};
+        var new_value = $(this).val();
+        var new_dep = $(this).attr('department');
+        new_obj.name = new_value;
+        new_obj.department = new_dep;
+        new_obj_list[count] = new_obj;
+        count++;
+    });
+    console.log(new_obj_list);
     console.log(checkbox_value);
     var obj = {};
     var content = tinyMCE.get('mytextarea').getContent();
@@ -436,6 +487,7 @@ function submitChange() {
     obj.description = content;
     obj.department = department;
     obj.symptoms = symptoms;
+    obj.newSymptoms = new_obj_list;
     console.log(obj);
 
     //var data_form =  $('#textform').serialize();
