--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -163,6 +163,10 @@ $(document).ready(function(){
         window.location.replace('/DepartmentPage');
     });
 
+    $("#searchbydis").click(function() {
+        window.location.replace('/SearchPage');
+    });
+
     $("#nearby").click(function() {
         window.location.replace('/MapPage');
     });
