--- a/src/main/resources/static/searchPage.html
+++ b/src/main/resources/static/searchPage.html
@@ -9,6 +9,47 @@
 
 </head>
 <style>
+    /* The Modal (background) */
+    .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /*  Content */
+    .modal-content {
+    background-color: #1aa8b9;
+    margin: auto;
+    padding: 20px;
+    padding-bottom: 10%;
+    border: 1px solid #888;
+    width: 80%;
+    height: auto;
+    }
+
+    /* The Close Button */
+    .close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    }
+
     body {
     background-color: #1aa8a8;
     }
@@ -112,6 +153,18 @@
         </div>
     </div>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">CLOSE</span>
+            <h1 style="border-bottom: 4px solid #e3ae24">POSSIBLE DISEASE</h1>
+            <ul id="diseaseList" class="grids" style="margin-left: 5px">
+
+            </ul>
+        </div>
+    </div>
+
 </div>
 
 </body>
@@ -183,6 +236,11 @@ $(document).ready(function(e){
 });
 
 function search() {
+    var modal = document.getElementById('myModal');
+    var span = document.getElementsByClassName("close")[0];
+    modal.style.display = "block";
+
+
     var obj = {};
     var input = document.getElementById('searchBox').value;
     var department = $("#search_concept").text();
@@ -208,6 +266,14 @@ function search() {
             console.log(result);
         });
     });
+
+    span.onclick = function() {
+        modal.style.display = "none";
+        var symptomList = document.getElementById('symptomList');
+        while (symptomList.firstChild) {
+            symptomList.removeChild(symptomList.firstChild);
+        }
+    }
 }
 
 </script>
